--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
-/home/samira/RecyandCo/venv
+# Environnement virtuel python
+venv/
+
+# Fichiers de configuration locaux
+.env
+*.pyc
+__pycache__/
+
+# Fichiers systèmes
+.DB_Store
+Thumbs.db
