--- a/app/.env.example
+++ b/app/.env.example
@@ -2,8 +2,11 @@
 # ⚠️ En production, génère une vraie clé aléatoire et longue :
 # python -c "import secrets; print(secrets.token_hex(32))"
 SECRET_KEY=une_clef_tres_secrete
+JWT_EXP_MINUTES = 60
 
 # URL de connexion à la base MySQL via SQLAlchemy.
 # Format : mysql+pymysql://<utilisateur>:<motdepasse>@<hôte>/<nom_base>
 # Exemple : mysql+pymysql://root:monmotdepasse@localhost/reciandco
 DATABASE_URL=mysql+pymysql://user:password@localhost/reciandco
+
+
